app/assets/stylesheets/header.scss
.user-header {
  width: 100%;
  background: #111;
  padding: 10px 0px;
  color: #eee;
}

.logo {
  font-size: 16px;
  font-weight: 600;
  display: block;
  float: left;
  color: #aa7700;
  width: 300px;
  padding: 5px 0px 0 20px;
  vertical-align: baseline;
  img{
    max-width: 15%;
    max-height: auto;
    display: block;
    float: left;
  }
}

.login-sidebar {
  display: block;
  float: right;
  width: 100px;
  height: 100px;
}

.login-sidebar img{
  display: block;
  max-width: 100%;
  max-height: 100%;
}



.app-header-link {
  font-weight: 600;
}

.header-link {
  float: right;
  font-size: 12px;
  padding: 0px;
  border: 0;
  margin: 0px 10px;
  background: #111;
  color: #aaa;
}

.header-link:hover {
  color: #fff;
}

.app-header {
  width: 100%;
  background: #eee;
  font-size: 12px;
  padding: 15px 0px 5px 0px;
}

.app-header.list {
  width: 800px;
  height: 30px;
  margin: auto;
}

.app-header.list > li {
  display: block;
  float: right;
}

.app-header-link:hover {
  border-bottom: 3px solid #ccc;
  color: #999;
}

.app-header-link {
  height: 100%;
  padding: 10px 0px;
  margin: 5px 10px;
}

.app-header-link.current {
  border-bottom: 3px solid #fdda85;
}

.app-header-link.current:hover {
  color: #000;
}

.logo {
  display: block;
  float: left;
}

.main-content {
  width: 100%;
  position: relative;
  display: block;
}

